--- a/templates/index.html
+++ b/templates/index.html
@@ -7,22 +7,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>Mission to Mars</title>
 </head>
 
 <body>
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center p-4">
         <h1 class="display-3">Mission to Mars</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape new data</a>
       </div>
-
+      <img id="featured_img" src="{{ mars.featured_img }}" alt="" srcset="">
       <div class="container text-center">
           <h2 class="display-5">{{ mars.mars_title }}</h2>
           <p>{{ mars.mars_p }}</p>
-          
       </div>
 
 
