--- a/templates/index.html
+++ b/templates/index.html
@@ -15,23 +15,51 @@
     <div class="jumbotron text-center p-4">
         <h1 class="display-3">Mission to Mars</h1>
         <a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape new data</a>
-      </div>
-      <img id="featured_img" src="{{ mars.featured_img }}" alt="" srcset="">
-      <div class="container text-center">
-          <h2 class="display-5">{{ mars.mars_title }}</h2>
-          <p>{{ mars.mars_p }}</p>
-      </div>
+    </div>
+    <div class="container">
 
+        <div class="row mb-4">
+            <div class="col-md-3">
+                <h5>{{mars.hemispheres[0].title}}</h5>
+                <img class="w-100" src="{{mars.hemispheres[0].img_url}}" alt="">
+                <h5>{{mars.hemispheres[1].title}}</h5>
+                <img class="w-100" src="{{mars.hemispheres[1].img_url}}" alt="">
+            </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+            <div class="col-md-6">
+                {{mars.mars_facts | safe}}
+                <img id="featured_img" src="{{ mars.featured_img }}" alt="" srcset="">
+            </div>
+
+            <div class="col-md-3">
+                <h5>{{mars.hemispheres[2].title}}</h5>
+                <img class="w-100" src="{{mars.hemispheres[2].img_url}}" alt="">
+                <h5>{{mars.hemispheres[3].title}}</h5>
+                <img class="w-100" src="{{mars.hemispheres[3].img_url}}" alt="">
+            </div>
+
+        </div>
+
+        <div class="text-center">
+            <h2 class="display-5">{{ mars.mars_title }}</h2>
+            <p>{{ mars.mars_p }}</p>
+        </div>
+        <div class="text-center">
+            <h3 class="dispay-2">Mars Weather</h3>
+            <p>{{mars.mars_weather}}</p>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
+    </div>
+
 </body>
 
 </html>
